--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -73,6 +73,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+h1, h2, h3, h4, h5, h6, p, a {
+  position: relative;
+  z-index: 2;
+}
+
 
 /* ------------------------------------------- */
 /* Link styles
